Add gangwar area for Plattenbau and Rotlicht